# DockerUnifiedUIMAInterface

./: .gitignore  .jitpack.yml  CITATION.cff  Dockerfile  README.md  ResourceManager.yml  cite.bib  cite_multimodality.bib  performance.db  pom.xml  rest_remote_1.db  rest_test.db  rest_test1.db  rest_test2.db  rest_test3.db  run_build_container.sh  serialization_gercorpa.db  websocket_1_test.db  websocket_rest_test.db  websocket_rest_test1.db  websocket_small_packets_of_rokens_opened_client_test.db  websocket_small_packets_of_rokens_test.db  websocket_small_packets_of_rokens_test1.db  websocket_test.db  websocket_test1.db  websocket_test2.db  websocket_test3.db  websocket_test4.db  websocket_test6.db  websocket_token_15.db  websocket_token_20.db  websocket_token_25.db  websocket_token_50.db  websocket_token_open_100.db  websocket_token_open_15.db  websocket_token_open_15_in_two_machines.db  websocket_token_open_200.db  websocket_token_open_25.db  websocket_token_open_50.db  websocket_token_open_50_2.db  (+3 more)
benchmark_containers/: analysis.ipynb
docs/: .gitignore  .travis.yml  CNAME  Gemfile  _config.yml  index.md  jekyll-theme-architect.gemspec
duui_parallel_benchmarks/: parallel_benchmarks.ipynb
paper_code_submission/: README.md
performance_test_visualiser/: Untitled.ipynb  analysesTest.py  analysesTokens.py  analysesTokensClass.py  analysesTokensRemoteClass.py  analysesTokensRemoteClassTest.py  main.py  (+9 more)
test_containers/rust_sentiment/: Cargo.toml  dockerfile  rust_communication_json.lua  rust_communication_msgpack.lua
test_containers/rust_sentiment/src/: main.rs
(+858 files in other folders)
