[package]
name = "rust_sentiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-bert = "0.13.0"
bytes = "1.1.0"
rmp = "0.8.10"
rmp-serde = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.5.1"
